# aisd-semestr-work-1-pochtiTolstoy

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  run  run.sh  run_pstree.sh  test.sh
include/: avltree.hpp  node.hpp  util.hpp
src/: Makefile  avltree.hpp  main.cpp  node.hpp
src/avltree/: avltree.hpp  node.hpp
src/core/: avltree.cpp
src/utils/: menu.cpp  menu.hpp  pstree_fun.hpp
tests/: avltree_test.cpp
